--- a/frontend/src/app/components/pages/food-page/food-page.component.html
+++ b/frontend/src/app/components/pages/food-page/food-page.component.html
@@ -1,5 +1,9 @@
-<p>food-page works!</p>
-<div class="container">
+<app-not-found
+  [visible]="!food.id"
+  notFoundMessage="Food Not Found"
+  resetLinkText="Back To Homepage">
+</app-not-found>
+<div *ngIf="food.id" class="container">
     <img [src]="food.imageUrl" [alt]="food.name"/>
   
     <div class="details">
