--- a/frontend/src/app/components/pages/payment-page/payment-page.component.html
+++ b/frontend/src/app/components/pages/payment-page/payment-page.component.html
@@ -21,7 +21,9 @@
     </div>
     <div class="buttons-container">
       <div class="buttons">
-  
+        <button (click)="payOrder()">
+         Pay the order with magic
+        </button>
       </div>
     </div>
   </div>
