--- a/frontend/src/app/components/pages/payment-page/payment-page.component.css
+++ b/frontend/src/app/components/pages/payment-page/payment-page.component.css
@@ -38,3 +38,20 @@
     margin: 2rem;
     width: 35rem;
   }
+  
+  button{
+    color: white;
+    background-color: #e72929;
+    width: 100%;
+    height: 3rem;
+    opacity: 0.8;
+    font-size: 1.3rem;
+    border: none;
+    border-radius: 0.5rem;
+    box-shadow: 2px 2px 2px 2px grey;
+  }
+  
+  button:hover{
+    opacity: 1;
+    cursor: pointer;
+  }
